--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
+    "axios": "^1.6.7",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
@@ -27,9 +29,11 @@
     "styled-components": "^6.1.8",
     "vite-plugin-svgr": "^4.2.0",
     "vite-plugin-windicss": "^1.9.3",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "yup-phone-lite": "^2.0.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
