--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tailwindcss": "^3.4.1",
     "twin.macro": "^3.4.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-minify": "^1.5.2"
   }
 }
