--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-auth": "^1.0.3",
     "react-helmet-async": "^2.0.4",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.8",
     "vite-plugin-svgr": "^4.2.0",
@@ -34,9 +36,11 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
@@ -50,6 +54,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.1.1",
     "less": "^4.2.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.1",
     "twin.macro": "^3.4.0",
