--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fontsource/lexend-deca": "^5.0.8",
     "@fontsource/poppins": "^5.0.8",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
@@ -27,6 +29,7 @@
     "react-firebase-auth": "^1.0.3",
     "react-helmet-async": "^2.0.4",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.8",
     "vite-plugin-svgr": "^4.2.0",
