--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
+    "ipdata": "^2.2.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
