--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fontsource/lexend-deca": "^5.0.8",
     "@fontsource/poppins": "^5.0.8",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
