--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "bootstrap-icons": "^1.11.3",
+    "cssnano": "^6.0.3",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -62,9 +63,11 @@
     "lodash": "^4.17.21",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.27.1",
     "twin.macro": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-minify": "^1.5.2"
   }
 }
