--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "gh-pages": "^6.1.1",
     "less": "^4.2.0",
     "lodash": "^4.17.21",
+    "minimatch": "^9.0.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.1",
     "terser": "^5.27.1",
     "twin.macro": "^3.4.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
     "vite": "^5.0.8",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-minify": "^1.5.2"
